Add style.css: Added style file

--- a/main.html
+++ b/main.html
@@ -31,7 +31,17 @@
         
     </header>
     <section>
-        
+        <h1>Slider</h1>
+    </section>
+    <section>
+        <div>
+            <div>
+                <img src="#" alt="This is an image">
+            </div>
+            <p>Product Name</p>
+            <div>Rs 100</div>
+            <button>Add to Cart</button>
+        </div>
     </section>
     <footer>
 
