--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC e-commerce</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <!--shift+alt+f-->
 <body>
@@ -34,9 +35,11 @@
         <h1>Slider</h1>
     </section>
     <section>
-        <div>
-            <div>
-                <img src="#" alt="This is an image">
+        <div class="big-box">
+            <div class="flex-container">
+                <div class="flex-item">
+                  <img src="image/pc_case.jpg" alt="Responsive Image 1">
+                </div>
             </div>
             <p>Product Name</p>
             <div>Rs 100</div>
